@@ -1,12 +1,7 @@
 {
   "count": 4,
-  "uniques": 2,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-06-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-06-02T00:00:00Z",
       "count": 1,
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2024-06-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
